<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- Versão do modelo Maven -->
    <modelVersion>4.0.0</modelVersion>

    <!-- Informações do projeto -->
    <groupId>br.com.ifba</groupId>
    <artifactId>prg03persistencia</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <!-- Configurações do projeto -->
    <properties>

        <!-- Define a codificação UTF-8 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Define a versão do Java -->
        <maven.compiler.release>25</maven.compiler.release>

        <!-- Classe principal do projeto -->
        <exec.mainClass>br.com.ifba.curso.view.CursoListar</exec.mainClass>
    </properties>

    <dependencies>

        <!-- Dependência do Hibernate -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.4.1.Final</version>
        </dependency>

        <!-- Dependência do PostgreSQL -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>

        <!-- API Jakarta Persistence -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.2.0</version>
        </dependency>

        <!-- Layout do NetBeans -->
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE250</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Plugin para executar o projeto -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>

                <configuration>

                    <!-- Classe principal executada -->
                    <mainClass>
                        br.com.ifba.curso.view.CursoListar
                    </mainClass>

                </configuration>

            </plugin>

            <!-- Plugin do compilador Maven -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>

                <configuration>
                    <compilerArgs>

                        <!-- Habilita recursos preview do Java -->
                        <arg>--enable-preview</arg>

                    </compilerArgs>
                </configuration>

            </plugin>

        </plugins>
    </build>

</project>